--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
-<html>
-   <head>
-   </head>
-   <body>
-      <!-- Write your HTML in this file! -->
-   </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>1996 AngelFire Website</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <header id="mainHeading" style="color:red;">The Humpty Dance</header>
+    <main>is your chance</main>
+    <article>to do the hump</article>
+    <p id="testP" class="funParagraph"> &lt; &reg; &gt; &lt; &reg; &gt; &lt; &reg; &gt; &lt; &reg; &gt; &lt; &reg; &gt; &lt; &reg; &gt; &lt; &reg; &gt; </p>
+    <img src='https://i.imgur.com/eGAS1Gc.jpeg' alt="The boy aint right">
+    <footer>this is my OC no stealing</footer>
+</body>
 </html>
